--- a/PageStyling.css
+++ b/PageStyling.css
@@ -76,17 +76,21 @@
   display: flex;
   justify-content: center;
   padding: 0;  
+  align-items: center;
 }
 
 #Crowdsource img{
   margin-right: 15px;
   float: left;
-  width: 20%;
+  width: 15%;
+  height: 15%;
+  min-width: 150px;
+  border-radius: 50%;
 }
 
 #Crowdsource #text{
-  width: 65%;
-  justify-content: center;
+  width: 40%;
+  text-align: center;
 }
 
 #App-Download {
