--- a/PageStyling.css
+++ b/PageStyling.css
@@ -60,13 +60,30 @@
  #About img{
   width: 60%;
   float: left;
-  padding-right: 10px;
   min-width: 505px;
  }
 #About .Two-row-container .text{
   width: 40%;
   text-align: center;
+  padding: 0 30px 0 30px;
 }
+
+
+button{
+  padding: 10px;
+  color: white;
+  background-color: rgb(255, 74, 74);
+  border-radius: 3px;
+  border: 2px solid #ffffff;
+}
+
+button a{
+  font-size: 12px;
+  text-decoration: none;
+  color: #ffffff;
+  font-weight: bold;
+}
+
 #Crowdsource {
   justify-content: center;
   padding: 0;
