--- a/PageStyling.css
+++ b/PageStyling.css
@@ -72,10 +72,11 @@
 
 button{
   padding: 10px;
+  margin-top: 10px;
   color: white;
   background-color: rgb(255, 74, 74);
   border-radius: 3px;
-  border: 2px solid #ffffff;
+  border: 0px solid #ffffff;
 }
 
 button a{
