--- a/PageStyling.css
+++ b/PageStyling.css
@@ -26,7 +26,6 @@
  }
 
  header ul{
-   margin:0;
    padding:0;
  }
 
@@ -41,8 +40,13 @@
  }
 
  header #branding h1{
-   margin:0;
    padding:0;
+ }
+
+ header img{
+  float:left;
+  width: 10%;
+  vertical-align: center;
  }
 
  header nav{
