--- a/PageStyling.css
+++ b/PageStyling.css
@@ -121,6 +121,26 @@ button a{
   text-align: center;
 }
 
+#Features img{
+  margin-right: auto;
+  margin-left: auto;
+  float: left;
+  width: 15%;
+  height: 15%;
+  min-width: 150px;
+  border-radius: 50%;
+
+}
+#Features #wrap {
+  display: flex;
+  justify-content: center;
+  padding: 0;  
+}
+
+#Features #Details{
+  text-align: center;
+  max-width: 350px;
+}
 #App-Download {
   background: #f4f4f4;
   margin-top: 55px;
