--- a/PageStyling.css
+++ b/PageStyling.css
@@ -1,5 +1,5 @@
  body {
-  font-family: Arial,Helvetica, sans-serif;
+  font-family: -apple-system,BlinkMacSystemFont,Segoe UI,Roboto,Helvetica Neue,Arial,Noto Sans,Liberation Sans,sans-serif,Apple Color Emoji,Segoe UI Emoji,Segoe UI Symbol,Noto Color Emoji;
   padding:0;
   margin:0;
   background-color: #f4f4f4;
@@ -18,6 +18,12 @@
    color: #494D50;
    padding-top: 30px;
    min-height: 70px;
+ }
+
+ header h1{
+   font-weight: 300;
+   font-size: 3em;
+   margin: 0;
  }
  header a{
    font-size: 20px;
@@ -46,7 +52,9 @@
  header img{
   float:left;
   width: 10%;
-  vertical-align: center;
+  position: relative;
+  bottom: 12px;
+  min-width: 110px;
  }
 
  header nav{
