--- a/PageStyling.css
+++ b/PageStyling.css
@@ -121,6 +121,10 @@ button a{
   text-align: center;
 }
 
+#Features {
+  margin-top: 50px;
+}
+
 #Features img{
   margin-right: auto;
   margin-left: auto;
@@ -128,6 +132,7 @@ button a{
   width: auto;
   height: auto;
   min-width: 150px;
+  max-width: 150px;
   border-radius: 50%;
 
 }
@@ -141,6 +146,15 @@ button a{
   text-align: center;
   max-width: 350px;
 }
+
+#Features .Column-container {
+  margin-right: 20px;
+  margin-left: 20px;
+  width: 15%;
+  background-color: #d4d4d4b2;
+  border-radius: 7px;
+}
+
 #App-Download {
   background: #f4f4f4;
   margin-top: 55px;
