--- a/PageStyling.css
+++ b/PageStyling.css
@@ -16,17 +16,29 @@
  header{
    background: #EBEBEB;
    color: #494D50;
-   padding-top: 30px;
-   min-height: 70px;
+   display: flex;
+   justify-content: space-between;
+   align-items: center;
+   padding: 0 5%;
  }
 
+ header #Branding {
+   display: flex;
+   justify-content: space-evenly;
+   align-items: center;
+ }
+ 
+ header img{
+  margin: 0;
+  width: 30px;
+ }
  header h1{
-   font-weight: 300;
-   font-size: 3em;
-   margin: 0;
+   font-weight: 400;
+   font-size: 30px;
+   float: right;
  }
  header a{
-   font-size: 20px;
+   font-size: 18px;
    text-decoration: none;
    color: #494D50;
  }
@@ -36,8 +48,7 @@
  }
 
  header li{
-   float: left;
-   display: inline;
+   display: inline-block;
    padding: 0 20px 0 20px;
  }
 
@@ -49,18 +60,6 @@
    padding:0;
  }
 
- header img{
-  float:left;
-  width: 10%;
-  position: relative;
-  bottom: 12px;
-  min-width: 110px;
- }
-
- header nav{
-   float: right;
-   margin-top: 10px;
- }
 
  /* Intro */
 #About{
