--- a/PageStyling.css
+++ b/PageStyling.css
@@ -85,7 +85,7 @@ header #branding h1 {
   align-items: center;
   justify-content: center;
   background-color: #c8c8c8;
-  background-image: url("img/map.png");
+  background-image: url("img/mapv2.png");
   height: 600px;
   background-position: center;
   background-repeat: no-repeat;
@@ -190,6 +190,7 @@ button a:hover {
 
 #Features #wrap {
   display: flex;
+  flex-wrap: wrap;
   justify-content: center;
   padding: 0;
 }
