Added section detailing new shutle tracker plans

--- a/PageStyling.css
+++ b/PageStyling.css
@@ -161,6 +161,37 @@ button a:hover {
   text-decoration-color: rgba(255, 255, 255, 1);
 }
 
+#NewTrackingSection {
+  justify-content: center;
+  padding: 0;
+  margin-top: 50px;
+  padding-top: 15px;
+  padding-bottom: 15px;
+  right: 30px;
+  background-color: #f4f4f4;
+}
+
+#NewTrackingSection img {
+  margin-left: 25px;
+  float: right;
+  width: 15%;
+  height: 15%;
+  min-width: 150px;
+  border-radius: 50%;
+}
+
+#NewTrackingSection #wrap {
+  display: flex;
+  justify-content: center;
+  padding: 0;
+  align-items: center;
+}
+
+#NewTrackingSection #text {
+  width: 40%;
+  text-align: center;
+}
+
 #Crowdsource {
   justify-content: center;
   padding: 0;
